--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "gsap": "^3.13.0",
     "mammoth": "^1.9.1",
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
     "pdf-parse": "^1.1.1",
     "pdfkit": "^0.15.0",
+    "react-router-dom": "^7.8.0",
     "socket.io": "^4.8.1",
     "tesseract.js": "^5.0.4",
     "winston": "^3.17.0",
