🚀 Launch Rapid AI Store - Global AI Tools Marketplace
✨ Major Features Added:
- Complete AI Store marketplace with app publishing & discovery
- Global scaling infrastructure with multi-region support
- Advanced analytics and real-time insights
- Developer partnership program with 70-85% revenue sharing
- Multi-currency payment processing (10+ currencies)
- AI-powered asset generation (icons, screenshots, banners)

🏗️ New Services:
- aiStoreService.js - Core marketplace engine
- globalScaling.js - Multi-region deployment & auto-scaling
- analytics.js - Comprehensive metrics & insights
- partnershipService.js - Developer relations & revenue sharing
- paymentService.js - Global payment processing

🌐 API Endpoints:
- /api/store/* - 15+ marketplace endpoints
- /api/partnership/* - Developer partnership management
- /api/payment/* - Payment processing & subscriptions

📚 Documentation:
- API_DOCUMENTATION.md - Complete API reference
- ARCHITECTURE.md - Technical architecture guide
- DEPLOYMENT.md - Production deployment guide
- render.yaml - Render.com deployment config

🎯 Ready for Google Cloud Startup Program:
- Cloud-native microservices architecture
- Global infrastructure (6+ regions)
- AI-first platform design
- Enterprise-grade security & compliance
- Scalable to millions of users

🌟 Market Position:
- First AI-specific app marketplace
-  market opportunity
- Industry-leading developer revenue sharing
- Global distribution platform

Frontend: https://shankarelavarasan.github.io/rapid-saas-ai-store/
Backend: https://rapid-saas-ai-store.onrender.com

--- a/package.json
+++ b/package.json
@@ -1,17 +1,30 @@
 {
-  "name": "gemini-backend",
+  "name": "rapid-saas-ai-store",
   "version": "1.0.0",
+  "description": "Global AI Tools Marketplace - The world's first comprehensive AI tools distribution platform",
   "main": "server.js",
   "type": "module",
+  "keywords": ["ai", "marketplace", "saas", "tools", "distribution", "global", "platform"],
+  "author": "Shankar Elavarasan",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/shankarelavarasan/rapid-ai-assistant.git"
+  },
+  "homepage": "https://shankarelavarasan.github.io/rapid-saas-ai-store/",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "tsc",
+    "build": "npm install && npm run lint",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "lint": "eslint . --ext .js,.ts,.json",
     "lint:fix": "eslint . --ext .js,.ts,.json --fix",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "deploy": "npm run build && npm start",
+    "health-check": "curl -f http://localhost:3000/health || exit 1"
   },
   "dependencies": {
     "@google/generative-ai": "^0.15.0",
